--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,1 +1,80 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <title>Our Menu</title>
+  </head>
+
+
+  <body>
+    <nav  class="navbar navbar-expand-lg navbar-dark bg-dark my-0" >
+      <a id="top" class="navbar-brand food" href="#">Food, LLC</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbar_icerik"  >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbar_icerik">
+        <ul class="navbar-nav mr-auto">
+          
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Chicken</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Beef</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Sushi</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div>
+      <h1 class="text-center">Our Menu</h1>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <section class="poulet">
+            <h2>Chicken</h2>
+            <p>
+              Le poulet est un type de volaille domestique, une sous-espèce de la sauvagine rouge. Les poulets sont un des animaux domestiques les plus communs et les plus répandus.<br />
+              <a href="#top">Go Up</a>
+            </p>
+          </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+          <section class="viande">
+            <h2>Beef</h2>
+            <p>
+             Un Steakhouse est un restaurant spécialisé dans les viandes. Dans ces restaurants, l'offre de viande la plus généralisée est le beouf grillée, même si on y trouve aussi au menu du porc.  <br />
+              <a href="#top">Go Up</a>
+            </p>
+          </section>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <section class="sushi">
+            <h2>Sushi</h2>
+            <p>
+             Le sushi est un plat traditionnel japonais, composé d'un riz vinaigré appelé shari combiné avec un autre ingrédient appelé neta qui est habituellement du poisson cru ou des fruits de mer.<br />
+              <a href="#top">Go Up</a>
+            </p>
+          </section>
+        </div>
+      </div>
+    </div>
+
+   
+  </body>
+</html>
+
