--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
-</body>
+  <h4> open google chrome tools (the console)</h4> 
+  </body>
 </html>
